--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <img src="images/moto3.jpeg" alt="">
             <img src="images/moto4.jpeg" alt="">
             <img src="images/moto5.jpeg" alt="">
+            <img src="images/moto6.jpeg" alt="">
+            <img src="images/moto7.jpeg" alt="">
+            <img src="images/moto8.jpeg" alt="">
               </section>
         </section>
         
