ultima mejora de 23/01

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Hand made motos bolivia</h1>
 
         <section id="galeria">
-            <h2>Galeria</h2>
+            <h2></h2>
             <section class="slide">
             <img src="images/moto1.jpeg" alt="moto1">
             <img src="images/moto2.jpeg" alt="">
@@ -50,11 +50,19 @@
                 </section>
         </section>
 
-    </main>
+        <section id="CONSTRUCTORES">
+            <H2>CONSTRUCTORES</H2>
+        </section>
+
+        <section id="proyectos">
+            <h2>PROYECTOS</h2>
+        </section>
+
         
     <footer>
         <section>
             <h2>Acerca de nosotros</h2>
+
         </section>
         
     </footer>
