--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <img src="images/moto6.jpeg" alt="">
             <img src="images/moto7.jpeg" alt="">
             <img src="images/moto8.jpeg" alt="">
+            <img src="images/moto9.png" alt="">
+            <img src="images/moto10.jpeg" alt="">
+            <img src="images/moto11.jpeg" alt="">
+            <img src="images/moto12.jpeg" alt="">
               </section>
         </section>
         
